# idagroup

./: README.md
ida/: .gitignore  Dockerfile  docker-compose.yml  global.env  pyproject.toml
ida/app/: enums.py  forms.py  logic.py  models.py  service.py  settings.py  urls.py  utils.py  views.py
ida/app/templates/app/: base.html  error.html  home.html  resize.html  upload.html
ida/ida/: asgi.py  settings.py  urls.py  wsgi.py
